<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nmsohn.willbank.SignupActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView
                android:id="@+id/img_profile"
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"

                app:srcCompat="@mipmap/ic_launcher_round"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"/>

        <!--username
        errorEnabled: delete if not required
        errorTextAppearance: delete if not required
        -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorText"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <!--name-->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <!--birth date-->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_birth"
                    android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>

        <!--mobile number-->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>

        <!-- sign up button-->
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/action_sign_up"/>

        <!-- link to sign in-->
        <TextView android:id="@+id/link_sign_in"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/btn_link_to_sign_in"
                  android:gravity="center"
                  android:textSize="16sp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
